--- a/src/OfflineSorter_Helper_Config.json
+++ b/src/OfflineSorter_Helper_Config.json
@@ -3,14 +3,14 @@
     "open_en": 1,
     "threshold": "2",
     "file_format": 0,
-    "gen_ofb_en": 1,
-    "filter_en": 1,
-    "filter_cutoff": "250",
-    "filter_type": "Butterworth",
-    "filter_pole": "2",
-    "detect_en": 1,
-    "detect_threshold": "-60",
-    "sort_en": 1,
-    "sort_type": "ValleySeek2d",
-    "align_en": 1
+    "gen_ofb_en": 0,
+    "filter_en": 0,
+    "filter_cutoff": "",
+    "filter_type": "",
+    "filter_pole": "",
+    "detect_en": 0,
+    "detect_threshold": "",
+    "sort_en": 0,
+    "sort_type": "",
+    "align_en": 0
 }
